=======
CHANGES
=======

1.0.2 (unreleased)
------------------

- ...


1.0.1 (2018-05-16)
------------------

- bugfix: remove None from queryNextUtiliy because getNextUtility signature got
  changed and None was used as name argument.

- cleanup, removed unused imports

- Get rid of deprecation warning. Switch hooks import from zope.site to
  zope.component

- skip test_exception_in_subscriber_leaves_item_in_place for IAuthenticator
  container. This zope.container test method left over an event subscriber with
  zope.container version 4.2.1 which raises an error in other methods. Needs
  review and probably a tear down in zope.container test method.


1.0.0 (2017-04-17)
------------------

- Ping Python support to 2.7, 3.5, 3.6 and PyPy.


1.0.0a5 (2013-03-31)
--------------------

- More Py3 compatibility bugs in untested code.


1.0.0a4 (2013-02-28)
--------------------

- Removed support for Zope generations. It was not used and application-wide
  generations make more sense anyways. This removed the
  ``zope.app.generations`` and ``zope.generations`` dependencies.

- Made ``z3c.configurator`` support optional.

- Cleaned up source code a little bit.


1.0.0a3 (2013-02-28)
--------------------

- Changed manifest to actually include the page templates.


1.0.0a2 (2013-02-28)
--------------------

- Added version Trove classifiers.


1.0.0a1 (2013-02-28)
--------------------

- Dropped support for Python 2.4 and 2.5, added Python 3.3 support.

- Removed dependencies on ``zope.app`` packages.


0.8.1 (2011-01-21)
------------------

- Bugfix: Did not handle unicode IUser.login values.

- Fixed DeprecationWarnings.


0.8.0 (2010-01-25)
------------------

- Security Fix: move camefrom url to a session variable instead of exposing
  the url in the login form. Because the camefrom url is built at server side
  based on local information and will always only use internal traversal names.
  Exposing this camefrom query in the login url gives others only a point to