@@ -1,8 +1,10 @@
 language: python
+dist: xenial
 python:
-    - 2.6
     - 2.7
-    - 3.3
+    - 3.5
+    - 3.6
+    - 3.7
 install:
     - pip install .
 script:
