@@ -1,5 +1,5 @@
 [tox]
-envlist = py27,py35,py36,pypy
+envlist = py27,py35,py36,py37,pypy
 
 [testenv]
 usedevelop = true
